# loudterm

./: .gitignore  EXAMPLE_TEXT.txt  Justfile  README.md  TEMP.md  pyproject.toml
assets/: loudterm-logo.psd
docs/: kokoro-notes.md
src/loudterm/: cli.py  config.py  core.py
src/loudterm/audio/: player.py  writer.py
src/loudterm/backend/: kokoro.py  kokoro_example.py  kokoro_generator.py  kokoro_pipeline.py  kokoro_process_input.py  kokoro_voices.py
src/loudterm/backend/kokoro82m/: cliplay.py  cliplay_batch.py  example1.py  example2.py  example3.py  example4.py  example5.py  generator.py  pipeline.py  process_input.py  text_examples.py  text_examples_hindi.py  voices.py
src/loudterm/ui/: commands.py  completer.py  key_bindings.py  logo.py  loop.py  prints.py  process_commands.py  prompt.py  run_repl.py  styles.py
